# rl_navigation

./: CMakeLists.txt  README.md  package.xml
config/: ddpg_wheelodom.rviz  default.rviz  lidar.rviz  localization.yaml
launch/: cont.launch  darknet_ros.launch  ddpg_navi.launch  lidar_publisher.launch  publiser_launch.launch
scripts/: controller.py  ddpg_navi.py  input_publisher.py  lidar_publisher.launch
weight/lidar_180_19/: checkpoint  ddpg_actor.h5f.data-00000-of-00001  ddpg_actor.h5f.index  ddpg_critic.h5f.data-00000-of-00001  ddpg_critic.h5f.index
weight/weight_sample/: ddpg_actor.h5f.data-00000-of-00001  ddpg_actor.h5f.index  ddpg_critic.h5f.data-00000-of-00001  ddpg_critic.h5f.index
